[project]
name = "chartmogul-mcp-server"
version = "0.1.0"
description = "ChartMogul's MCP server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chartmogul>=4.6.0",
    "mcp[cli]>=1.7.1",
    "python-dotenv>=1.1.0",
]

[project.urls]
Home = "https://github.com/chartmogul/chartmogul-mcp-server"
